Update 'y6uar1qbi-java-quarkus' component image to: quay.io/jsmid/rhtap-qe-java-quarkus:e428ab0c5a4cae395cccf65b22f2744ea26054e7@sha256:dbfdccf3f54eb9e0de09315893dd185c0309a59c67d32a48f6c4df1c323c3d8d

--- a/components/y6uar1qbi-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/y6uar1qbi-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: y6uar1qbi-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe-java-quarkus:e428ab0c5a4cae395cccf65b22f2744ea26054e7@sha256:dbfdccf3f54eb9e0de09315893dd185c0309a59c67d32a48f6c4df1c323c3d8d
+          name: container-image
